syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.entity.data.service.v1;
import "org/hypertrace/entity/data/service/v1/entity.proto";
import "org/hypertrace/entity/data/service/v1/enriched_entity.proto";

message ByIdRequest {
  string entity_id = 2;
  string entity_type = 3;
}

message ByTypeAndIdentifyingAttributes {
  string entity_type = 2;
  map<string, AttributeValue> identifying_attributes = 3;
}

message Empty {
}

enum Operator {
  UNDEFINED = 0;
  AND = 1;
  OR = 2;
  EQ = 3;
  NEQ = 4;
  IN = 5;
  NOT_IN = 6;
  GT = 7;
  LT = 8;
  GE = 9;
  LE = 10;
  CONTAINS = 11;
  LIKE = 12;
  EXISTS = 13;
  NOT_EXISTS = 14;
}

message Query {
  repeated string entity_id = 2;
  string version = 3;
  string entity_type = 4;
  string entity_name = 5;
  AttributeFilter filter = 6;
  repeated OrderByExpression order_by = 9;
  int32 limit = 7;
  int32 offset = 8;
}

message RelationshipsQuery {
  repeated string entity_relationship = 2;
  repeated string from_entity_id = 3; // can be null
  repeated string to_entity_id = 4; // can be null
}

message AttributeFilter {
  string name = 1;
  Operator operator = 2;
  AttributeValue attributeValue = 3;
  repeated AttributeFilter childFilter = 4;
  bool is_multi_valued = 5;
}

message OrderByExpression {
  string name = 1;
  SortOrder order = 2;
}

enum SortOrder {
  ASC = 0;
  DESC = 1;
}

message MergeAndUpsertEntityRequest {
  Entity entity = 1;
  UpsertCondition upsertCondition = 2;

  message UpsertCondition {
    oneof update_condition {
      Predicate property_predicate = 2;
    }

    message Predicate {
      string attribute_key = 1;
      PredicateOperator operator = 2;
      AttributeValue value = 3;

      enum PredicateOperator {
        PREDICATE_OPERATOR_UNSPECIFIED = 0;
        PREDICATE_OPERATOR_EQUALS = 1;
        PREDICATE_OPERATOR_NOT_EQUALS = 2;
        PREDICATE_OPERATOR_GREATER_THAN = 3;
        PREDICATE_OPERATOR_LESS_THAN = 4;
      }
    }
  }
}

message MergeAndUpsertEntityResponse {
  Entity entity = 1;
}

message DeleteEntitiesRequest {
  string entity_type = 1;
  oneof delete_request {
    StringList entity_ids = 2;
    AttributeFilter filter = 3;
  }
}

message StringList {
  repeated string ids = 1;
}

message DeleteEntitiesResponse {
}
